Salesforce/main/default/main/default/objects/BusinessRules__c/fields/AddOliForAttachment__c.field-meta.xml
<CustomField>
    <fullName>AddOliForAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adiciona automaticamente opportunity line itens para os anexos II, III, IV e V</description>
    <label>AddOliForAttachment</label>
    <type>Checkbox</type>
</CustomField>