Salesforce/main/default/main/default/objects/BusinessRules__c/fields/AutoFillRegion__c.field-meta.xml
<CustomField>
    <fullName>AutoFillRegion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoFillRegion</label>
    <type>Checkbox</type>
</CustomField>