Salesforce/main/default/main/default/objects/BusinessRules__c/fields/AutoFillSeasonForA2__c.field-meta.xml
<CustomField>
    <fullName>AutoFillSeasonForA2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoFillSeasonForA2</label>
    <type>Checkbox</type>
</CustomField>