Salesforce/main/default/main/default/objects/BusinessRules__c/fields/AutoFillStock__c.field-meta.xml
<CustomField>
    <fullName>AutoFillStock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Insere automaticamente os dados do estoque baseado no mês e a época do ano.</description>
    <label>AutoFillStock</label>
    <type>Checkbox</type>
</CustomField>