Salesforce/main/default/main/default/objects/BusinessRules__c/fields/ChangeOpportunityOwner__c.field-meta.xml
<CustomField>
    <fullName>ChangeOpportunityOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ChangeOpportunityOwner</label>
    <type>Checkbox</type>
</CustomField>