Salesforce/main/default/main/default/objects/BusinessRules__c/fields/Epoca_de_Plantio_Final__c.field-meta.xml
<CustomField>
    <fullName>Epoca_de_Plantio_Final__c</fullName>
    <label>Epoca_de_Plantio_Final</label>
    <length>255</length>
    <type>Text</type>
</CustomField>