Salesforce/main/default/main/default/objects/BusinessRules__c/fields/ShareWithCreator__c.field-meta.xml
<CustomField>
    <fullName>ShareWithCreator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShareWithCreator</label>
    <type>Checkbox</type>
</CustomField>