Salesforce/main/default/main/default/objects/BusinessRules__c/fields/ValidateAIIUniqueness__c.field-meta.xml
<CustomField>
    <fullName>ValidateAIIUniqueness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValidateAIIUniqueness</label>
    <type>Checkbox</type>
</CustomField>