Salesforce/main/default/main/default/objects/BusinessRules__c/fields/ValidatePreviousAttachment__c.field-meta.xml
<CustomField>
    <fullName>ValidatePreviousAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValidatePreviousAttachment</label>
    <type>Checkbox</type>
</CustomField>