Salesforce/main/default/main/default/objects/BusinessRules__c/fields/ValidateSotck__c.field-meta.xml
<CustomField>
    <fullName>ValidateSotck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValidateSotck</label>
    <type>Checkbox</type>
</CustomField>