Salesforce/main/default/main/default/objects/BusinessRules__c/fields/ValidateStockDay__c.field-meta.xml
<CustomField>
    <fullName>ValidateStockDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValidateStockDay</label>
    <type>Checkbox</type>
</CustomField>