Salesforce/main/default/main/default/objects/BusinessRules__c/fields/ValidateStockMonth__c.field-meta.xml
<CustomField>
    <fullName>ValidateStockMonth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValidateStockMonth</label>
    <type>Checkbox</type>
</CustomField>