Salesforce/main/default/main/default/objects/BusinessRules__c/fields/ValidateStockMonths__c.field-meta.xml
<CustomField>
    <fullName>ValidateStockMonths__c</fullName>
    <description>Meses que não pode inserir o estoque</description>
    <inlineHelpText>Usar números separados por vírgula de um a doze - Exemplo: 1,2,3,12</inlineHelpText>
    <label>ValidateStockMonths</label>
    <length>255</length>
    <type>Text</type>
</CustomField>